# pyth-gdp-fetcher

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  README.md  docker-compose.yml
docs/: API.md  DEPLOYMENT.md
src/: main.rs
static/: index.html
