[package]
name = "pyth_gdp_fetcher"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.7", features = ["json", "macros"] }
clap = { version = "4.0", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
solana-client = "1.16.27"
solana-sdk = "1.16.27"
tokio = { version = "1.47.1", features = ["full"] }
tower-http = { version = "0.5", features = ["cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
reqwest = { version = "0.12", features = ["json"] }
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
pyth-sdk-solana = "0.8.0"
borsh = "0.10.3"
hex = "0.4"
